--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anita Eicher - Homeschooling Begleitung</title>
     <meta name="description" content="Professionelle Homeschooling-Begleitung mit Herz & Kompetenz. Individuelle Lernbegleitung für Ihr Kind." />
     <meta property="og:title" content="Anita Eicher - Homeschooling Begleitung" />
     <meta property="og:description" content="Professionelle Homeschooling-Begleitung mit Herz & Kompetenz. Individuelle Lernbegleitung für Ihr Kind." />
-    <meta property="og:image" content="https://images.pexels.com/photos/8613089/pexels-photo-8613089.jpeg?auto=compress&cs=tinysrgb&w=800" />
+    <meta property="og:image" content="images/hero-homeschooling.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Anita Eicher - Homeschooling Begleitung" />
     <meta name="twitter:description" content="Professionelle Homeschooling-Begleitung mit Herz & Kompetenz. Individuelle Lernbegleitung für Ihr Kind." />
-    <meta name="twitter:image" content="https://images.pexels.com/photos/8613089/pexels-photo-8613089.jpeg?auto=compress&cs=tinysrgb&w=800" />
+    <meta name="twitter:image" content="images/hero-homeschooling.jpg" />
   </head>
   <body>
     <div id="root"></div>
